--- a/works_webdesign/css/common.css
+++ b/works_webdesign/css/common.css
@@ -2,6 +2,46 @@
 
 /* 実績リストページ */
 /* トップ */
+#main {
+    padding-top: 200px;
+}
+
+.fade {
+    animation-name: fadeInAnime;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+@keyframes fadeInAnime {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeUp {
+    animation-name: fadeUpAnime;
+    animation-duration: 1.3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 section {
     max-width: 1000px;
     margin: 0 auto;
@@ -98,28 +138,41 @@ section {
 }
 
 @media screen and (max-width: 1000px) {
+    #main {
+        padding-top: 20vw;
+    }
+
     body > section {
         padding: 0 3%;
     }
 
+    .list_wrap h2 {
+        padding-left: 3%;
+    }
+
     .list_text {
-        width: 100%;
+        width: 90%;
         margin: 70px auto 0 auto;
     }
 
     .list_wrap .pic_hand {
         margin-top: auto;
+        margin-right: 3%;
         margin-bottom: -40px;
     }
 }
 
 @media screen and (max-width: 767px) {
+    #main {
+        padding-top: 30vw;
+    }
+
     body > section {
         padding: 0 5%;
     }
 
     .list_wrap h2 {
-        padding-left: 3%;
+        padding-left: 5%;
     }
 
     .list_wrap h2::after {
@@ -180,13 +233,14 @@ section {
 
 @media screen and (max-width: 1000px) {
     .list_content h3 {
-        margin-left: 0;
+        margin-left: 3%;
     }
 }
 
 @media screen and (max-width: 767px) {
     .list_content h3 {
         margin-bottom: 30px;
+        /* margin-left: 0; */
         padding-bottom: 0;
         font-size: 20px;
     }
@@ -305,9 +359,9 @@ section {
 }
 
 @media screen and (max-width: 500px) {
-    .list_slider {
+    /* .list_slider {
         width: 100%;
-    }
+    } */
 
     .list_slider .slick-prev::before,
     .list_slider .slick-next::before {
