--- a/css/common.css
+++ b/css/common.css
@@ -271,6 +271,10 @@ nav li.has-child ul li:active > ul {
         display: none;
     }
 
+    .pc_nav ul li a::after {
+        display: none;
+    }
+
     /* ハンバーガー */
     .sp_btn {
         display: block;
@@ -321,9 +325,9 @@ nav li.has-child ul li:active > ul {
     }
 
     /* トップページスクロール後 */
-    #btn_span.changeColor,
-    #btn_span::before.changeColor,
-    #btn_span::after.changeColor {
+    .toppage .sp_btn span.changeColor,
+    .toppage .sp_btn span::before.changeColor,
+    .toppage .sp_btn span::after.changeColor {
         background: #736357;
     }
 
@@ -645,6 +649,12 @@ h2 {
     color: white;
     text-align: center;
     line-height: 1.5;
+}
+
+@media screen and (max-width: 1200px) {
+    #footer ul li a::after {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1000px) {
